--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
 
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-24/04/2023</h1>
+      <h1 class="title is-size-2">Time:-24/04/2023 - 26/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -941,16 +941,16 @@
             <td>6 hr</td>
           </tr>
 
-          <!-- <tr>
+          <tr>
             <th>3</th>
             <td>javascript </td>
             <td> working on Blobmaker web</td>
-            <td>today working all svg color change , svg code copy function and some UI optimization </td>
+            <td>today working on generate random svg shape and some UI optimization </td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>19/04/2023</td>
+            <td>26/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>4</th>
             <td>Javascript</td>
@@ -978,7 +978,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">12 Hr</th>
+            <th class="is-size-4">18 Hr</th>
           </tr>
         </thead>
       </table>
