--- a/index.html
+++ b/index.html
@@ -950,17 +950,17 @@
             <td>26/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
             <td>working on Blobmaker web</td>
-            <td>today working on to generate random svg shape and some UI optimization</td>
+            <td>today working on generate random svg shape function, margin, padding and some UI optimization</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
             <td>20/04/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
