--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
 
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-24/04/2023 - 26/04/2023</h1>
+      <h1 class="title is-size-2">Time:-24/04/2023 - 28/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -960,17 +960,18 @@
             <td>20/04/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
             <td> working on Blobmaker web</td>
-            <td> today working on to generate random svg shape function, svg code copy function and some UI optimization
+            <td> today working on download svg function, svg code copy function, margin, padding and some UI
+              optimization
             </td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>21/04/2023</td>
+            <td>28/04/2023</td>
             <td>6 hr</td>
-          </tr>-->
+          </tr>
           <tr>
             <th></th>
             <th></th>
@@ -978,7 +979,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">18 Hr</th>
+            <th class="is-size-4">30 Hr</th>
           </tr>
         </thead>
       </table>
