--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 
     </div>
   </section>-->
-  <section class="section">
+  <!--<section class="section">
     <div class="table-container">
       <h1 class="title is-size-2">Time:-03/04/2023 - 07/04/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
@@ -972,6 +972,87 @@
             <td>28/04/2023</td>
             <td>6 hr</td>
           </tr>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">30 Hr</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </section>-->
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-02/02/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>working on Blobmaker web</td>
+            <td>working on input text area, reading mode, upload file button, different-different button and some UI
+              optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">No link</a></td>
+            <td>24/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <!--<tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>working on Blobmaker web</td>
+            <td>today working on input type, color button, svg icon margin, padding, javascript function and some UI
+              optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>25/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td> working on Blobmaker web</td>
+            <td>today working on generate random svg shape and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>26/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>working on Blobmaker web</td>
+            <td>today working on generate random svg shape function, margin, padding and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>20/04/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>5</th>
+            <td>html, css, javascript</td>
+            <td> working on Blobmaker web</td>
+            <td> today working on download svg function, svg code copy function, margin, padding and some UI
+              optimization
+            </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>28/04/2023</td>
+            <td>6 hr</td>
+          </tr>-->
           <tr>
             <th></th>
             <th></th>
