--- a/index.html
+++ b/index.html
@@ -1006,22 +1006,22 @@
             <td>working on Blobmaker web</td>
             <td>working on input text area, reading mode, upload file button, different-different button and some UI
               optimization</td>
-            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">No link</a></td>
-            <td>24/04/2023</td>
+            <td><a href="" target="_blank">No link</a></td>
+            <td>02/05/2023</td>
             <td>6 hr</td>
           </tr>
 
-          <!--<tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
-            <td>working on Blobmaker web</td>
-            <td>today working on input type, color button, svg icon margin, padding, javascript function and some UI
-              optimization</td>
-            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>25/04/2023</td>
+            <td>working on Bionic Reader tool</td>
+            <td>today working on bold text function, show button function, full screen function, reset button function,
+              documents upload function and some UI optimization</td>
+            <td><a href=" https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
+            <td>03/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>3</th>
             <td>javascript </td>
@@ -1060,7 +1060,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">30 Hr</th>
+            <th class="is-size-4">12 Hr</th>
           </tr>
         </thead>
       </table>
