--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
   </section>-->
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-02/02/2023</h1>
+      <h1 class="title is-size-2">Time:-02/05/2023 - 04/05/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -1021,27 +1021,30 @@
             <td>03/05/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>3</th>
             <td>javascript </td>
-            <td> working on Blobmaker web</td>
-            <td>today working on generate random svg shape and some UI optimization </td>
-            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>26/04/2023</td>
+            <td> working on Bionic Reader tool</td>
+            <td>today working on dropdown button function, download img button function, copy img function, check box
+              margin and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Bionic Reader</a></td>
+            <td>4/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
-            <td>working on Blobmaker web</td>
-            <td>today working on generate random svg shape function, margin, padding and some UI optimization</td>
+            <td>working on Bionic Reader tool</td>
+            <td>today working on share button function, share tool button, facebook icon, Twitter icon, inbox icon, copy
+              icon, add to favs button function, register button, sign in button, report bug button function and some UI
+              optimization</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>20/04/2023</td>
+            <td>05/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
@@ -1060,7 +1063,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">12 Hr</th>
+            <th class="is-size-4">24 Hrs</th>
           </tr>
         </thead>
       </table>
