--- a/index.html
+++ b/index.html
@@ -1069,6 +1069,90 @@
       </table>
     </div>
   </section>
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-08/05/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>working on Blobmaker web</td>
+            <td>working on Highlighted function, download pdf function, download epug function, and some UI optimization
+            </td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">No link</a></td>
+            <td>08/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <!--<tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>working on Bionic Reader tool</td>
+            <td>today working on bold text function, show button function, full screen function, reset button function,
+              documents upload function and some UI optimization</td>
+            <td><a href=" https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
+            <td>03/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td> working on Bionic Reader tool</td>
+            <td>today working on dropdown button function, download img button function, copy img function, check box
+              margin and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Bionic Reader</a></td>
+            <td>4/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>working on Bionic Reader tool</td>
+            <td>today working on share button function, share tool button, facebook icon, Twitter icon, inbox icon, copy
+              icon, add to favs button function, register button, sign in button, report bug button function and some UI
+              optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>05/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+         
+            <tr>
+              <th>5</th>
+              <td>html, css, javascript</td>
+              <td> working on Blobmaker web</td>
+              <td> today working on download svg function, svg code copy function, margin, padding and some UI
+                optimization
+              </td>
+              <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+              <td>28/04/2023</td>
+              <td>6 hr</td>
+            </tr>-->
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">6 Hrs</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </section>
 </body>
 
 </html>
