--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
   </section>
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-08/05/2023</h1>
+      <h1 class="title is-size-2">Time:-08/05/2023 - 09/05/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -1095,17 +1095,17 @@
             <td>6 hr</td>
           </tr>
 
-          <!--<tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
             <td>working on Bionic Reader tool</td>
-            <td>today working on bold text function, show button function, full screen function, reset button function,
-              documents upload function and some UI optimization</td>
+            <td>today working on copy html function, copy markdown function, Highlighted function and some UI
+              optimization</td>
             <td><a href=" https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
-            <td>03/05/2023</td>
+            <td>09/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>3</th>
             <td>javascript </td>
@@ -1147,7 +1147,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">6 Hrs</th>
+            <th class="is-size-4">12 Hrs</th>
           </tr>
         </thead>
       </table>
