--- a/index.html
+++ b/index.html
@@ -1105,18 +1105,17 @@
             <td>09/05/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>3</th>
             <td>javascript </td>
             <td> working on Bionic Reader tool</td>
-            <td>today working on dropdown button function, download img button function, copy img function, check box
-              margin and some UI optimization </td>
-            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Bionic Reader</a></td>
-            <td>4/05/2023</td>
+            <td>today working on copy markdown function, scrollbar new Line function and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
+            <td>10/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>4</th>
             <td>Javascript</td>
@@ -1147,7 +1146,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">12 Hrs</th>
+            <th class="is-size-4">18 Hrs</th>
           </tr>
         </thead>
       </table>
