--- a/index.html
+++ b/index.html
@@ -1115,19 +1115,17 @@
             <td>10/05/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
             <td>working on Bionic Reader tool</td>
-            <td>today working on share button function, share tool button, facebook icon, Twitter icon, inbox icon, copy
-              icon, add to favs button function, register button, sign in button, report bug button function and some UI
-              optimization</td>
+            <td>today working on new Line function issue and some UI optimization</td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>05/05/2023</td>
+            <td>11/05/2023</td>
             <td>6 hr</td>
           </tr>
-         
+          <!--
             <tr>
               <th>5</th>
               <td>html, css, javascript</td>
@@ -1146,7 +1144,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">18 Hrs</th>
+            <th class="is-size-4">24 Hrs</th>
           </tr>
         </thead>
       </table>
