--- a/index.html
+++ b/index.html
@@ -1125,18 +1125,16 @@
             <td>11/05/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
-            <tr>
-              <th>5</th>
-              <td>html, css, javascript</td>
-              <td> working on Blobmaker web</td>
-              <td> today working on download svg function, svg code copy function, margin, padding and some UI
-                optimization
-              </td>
-              <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-              <td>28/04/2023</td>
-              <td>6 hr</td>
-            </tr>-->
+
+          <tr>
+            <th>5</th>
+            <td>html, css, javascript</td>
+            <td> working on Blobmaker web</td>
+            <td> today working on new Line function issue, font change function and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>12/04/2023</td>
+            <td>6 hr</td>
+          </tr>
           <tr>
             <th></th>
             <th></th>
@@ -1144,7 +1142,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">24 Hrs</th>
+            <th class="is-size-4">30 Hrs</th>
           </tr>
         </thead>
       </table>
