--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
-            <td> working on Blobmaker web</td>
+            <td>working on Bionic Reader tool</td>
             <td> today working on new Line function issue, font change function and some UI optimization </td>
             <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
             <td>12/04/2023</td>
@@ -1143,6 +1143,86 @@
             <th></th>
             <th>Total</th>
             <th class="is-size-4">30 Hrs</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-15/05/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>working on Bionic Reader tool</td>
+            <td>today working on download img function, download pdf function, epub function, copy img function and some
+              UI optimization</td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">No link</a></td>
+            <td>15/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <!--<tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>working on Bionic Reader tool</td>
+            <td>today working on copy html function, copy markdown function, Highlighted function and some UI
+              optimization</td>
+            <td><a href=" https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
+            <td>09/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td> working on Bionic Reader tool</td>
+            <td>today working on copy markdown function, scrollbar new Line function and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
+            <td>10/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>working on Bionic Reader tool</td>
+            <td>today working on new Line function issue and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>11/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>5</th>
+            <td>html, css, javascript</td>
+            <td>working on Bionic Reader tool</td>
+            <td> today working on new Line function issue, font change function and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>12/04/2023</td>
+            <td>6 hr</td>
+          </tr>-->
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">6 Hrs</th>
           </tr>
         </thead>
       </table>
