--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
 
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-15/05/2023</h1>
+      <h1 class="title is-size-2">Time:-15/05/2023 - 19/05/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -1175,27 +1175,27 @@
             <td>6 hr</td>
           </tr>
 
-          <!--<tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
             <td>working on Bionic Reader tool</td>
-            <td>today working on copy html function, copy markdown function, Highlighted function and some UI
-              optimization</td>
+            <td>today working on testing Download epub function, copy markdown function and some UI optimization</td>
             <td><a href=" https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
-            <td>09/05/2023</td>
+            <td>18/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+
           <tr>
             <th>3</th>
             <td>javascript </td>
-            <td> working on Bionic Reader tool</td>
-            <td>today working on copy markdown function, scrollbar new Line function and some UI optimization </td>
-            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
-            <td>10/05/2023</td>
+            <td> working on Instagram Line Break Generator</td>
+            <td>today working on Instagram Line Break Generator heading, copy button, textarea , textarea size
+              paragraph, clear button and some UI optimization </td>
+            <td><a href="" target="_blank">No link</a></td>
+            <td>19/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>4</th>
             <td>Javascript</td>
@@ -1222,7 +1222,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">6 Hrs</th>
+            <th class="is-size-4">18 Hrs</th>
           </tr>
         </thead>
       </table>
