--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
 
   section class="section">
   <div class="table-container">
-    <h1 class="title is-size-2">Time:-22/05/2023 - 24/05/2023</h1>
+    <h1 class="title is-size-2">Time:-22/05/2023 - 25/05/2023</h1>
     <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
       <thead>
         <tr>
@@ -1259,25 +1259,26 @@
         <tr>
           <th>2</th>
           <td>Javascript</td>
-          <td>working on Bionic Reader tool</td>
+          <td>wworking on Instagram Line Break Generator</td>
           <td>today working on text length function, break line function and some UI optimization</td>
           <td><a href="  https://surajbca.github.io/InstagramLineBreakGenerator/" target="_blank">Break Generator</a>
           </td>
           <td>24/05/2023</td>
           <td>6 hr</td>
         </tr>
-        <!--
+
         <tr>
           <th>3</th>
           <td>javascript </td>
           <td> working on Instagram Line Break Generator</td>
-          <td>today working on Instagram Line Break Generator heading, copy button, textarea , textarea size
-            paragraph, clear button and some UI optimization </td>
-          <td><a href="" target="_blank">No link</a></td>
-          <td>19/05/2023</td>
+          <td>today working on containre background, paragraph, bold function, italic function, cursive function,
+            fantasy function and some UI optimization </td>
+          <td><a href=" https://surajbca.github.io/InstagramLineBreakGenerator/" target="_blank">Break Generator</a>
+          </td>
+          <td>25/05/2023</td>
           <td>6 hr</td>
         </tr>
-        
+        <!--
             <tr>
               <th>4</th>
               <td>Javascript</td>
