--- a/index.html
+++ b/index.html
@@ -1333,22 +1333,22 @@
             <td>Today working on break line function issue function, copy function issue, testing and some UI
               optimization
             </td>
-            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">No link</a></td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Break Generator</a></td>
             <td>29/05/2023</td>
             <td>6 hr</td>
           </tr>
 
-          <!-- <tr>
+          <tr>
             <th>2</th>
             <td>Javascript</td>
-            <td>working on Bionic Reader tool</td>
-            <td>today working on copy html function, copy markdown function, Highlighted function and some UI
-              optimization</td>
-            <td><a href=" https://surajbca.github.io/bionicreader/" target="_blank">Bionic Reader</a></td>
-            <td>09/05/2023</td>
+            <td>working on Instagram Line Break Generator and project Updated</td>
+            <td>today working on textarea margin & padding, copy function, button margin, testing and working on project
+              Updated tool, table</td>
+            <td><a href=" https://surajbca.github.io/bionicreader/" target="_blank">Break Generator</a></td>
+            <td>30/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>3</th>
             <td>javascript </td>
@@ -1385,7 +1385,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">6 Hrs</th>
+            <th class="is-size-4">12 Hrs</th>
           </tr>
         </thead>
       </table>
