--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
   </section>-->
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-29/05/2023 - 31/05/2023</h1>
+      <h1 class="title is-size-2">Time:-29/05/2023 - 01/06/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -1358,17 +1358,17 @@
             <td>31/05/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
             <td>working on Bionic Reader tool</td>
-            <td>today working on new Line function issue and some UI optimization</td>
-            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
+            <td>today working on tabs mobile responsive and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Break Generator</a></td>
             <td>11/05/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
@@ -1385,7 +1385,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">18 Hrs</th>
+            <th class="is-size-4">24 Hrs</th>
           </tr>
         </thead>
       </table>
