--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
   </section>-->
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-29/05/2023 - 01/06/2023</h1>
+      <h1 class="title is-size-2">Time:-29/05/2023 - 02/06/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -1368,16 +1368,17 @@
             <td>11/05/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
-            <td>working on Bionic Reader tool</td>
-            <td> today working on new Line function issue, font change function and some UI optimization </td>
-            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">Blobmaker</a></td>
-            <td>12/04/2023</td>
+            <td>working on image average color finder</td>
+            <td> today working on navbar, share button, add button, report bugs button, image upload button, show image
+              div, check button and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">color finder</a></td>
+            <td>02/06/2023</td>
             <td>6 hr</td>
-          </tr>-->
+          </tr>
           <tr>
             <th></th>
             <th></th>
@@ -1385,7 +1386,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">24 Hrs</th>
+            <th class="is-size-4">30 Hrs</th>
           </tr>
         </thead>
       </table>
