--- a/index.html
+++ b/index.html
@@ -1375,7 +1375,7 @@
             <td>working on image average color finder</td>
             <td> today working on navbar, share button, add button, report bugs button, image upload button, show image
               div, check button and some UI optimization </td>
-            <td><a href="https://surajbca.github.io/blobmaker/" target="_blank">color finder</a></td>
+            <td><a href="" target="_blank">color finder</a></td>
             <td>02/06/2023</td>
             <td>6 hr</td>
           </tr>
