--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@
     </table>
   </div>
   </section>-->
-  <section class="section">
+  <!--<section class="section">
     <div class="table-container">
       <h1 class="title is-size-2">Time:-29/05/2023 - 02/06/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
@@ -1387,6 +1387,85 @@
             <th></th>
             <th>Total</th>
             <th class="is-size-4">30 Hrs</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </section>-->
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-29/05/2023 - 02/06/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>working on image average color finder</td>
+            <td>Today working on image upload function , color info, margin and some UI optimization</td>
+            <td><a href="" target="_blank">color finder</a></td>
+            <td>05/06/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>working on Instagram Line Break Generator and project Updated</td>
+            <td>today working on simple check box button function, Square Root check box button function, Dominant check
+              box button function, share modal function & icon and some optimization</td>
+            <td><a href="" target="_blank">Break Generator</a></td>
+            <td>06/06/2023</td>
+            <td>6 hr</td>
+          </tr>
+          <!--
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td> working on Bionic Reader tool</td>
+            <td>today working on mobile responsive, button margin, font style and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Break Generator</a></td>
+            <td>31/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td>working on Bionic Reader tool</td>
+            <td>today working on tabs mobile responsive and some UI optimization</td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Break Generator</a></td>
+            <td>11/05/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>5</th>
+            <td>html, css, javascript</td>
+            <td>working on image average color finder</td>
+            <td> today working on navbar, share button, add button, report bugs button, image upload button, show image
+              div, check button and some UI optimization </td>
+            <td><a href="" target="_blank">color finder</a></td>
+            <td>02/06/2023</td>
+            <td>6 hr</td>
+          </tr>-->
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">12 Hrs</th>
           </tr>
         </thead>
       </table>
