--- a/index.html
+++ b/index.html
@@ -1420,24 +1420,26 @@
           <tr>
             <th>2</th>
             <td>Javascript</td>
-            <td>working on Instagram Line Break Generator and project Updated</td>
+            <td>working on working on image average color finder</td>
             <td>today working on simple check box button function, Square Root check box button function, Dominant check
               box button function, share modal function & icon and some optimization</td>
             <td><a href="" target="_blank">Break Generator</a></td>
             <td>06/06/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>3</th>
             <td>javascript </td>
-            <td> working on Bionic Reader tool</td>
-            <td>today working on mobile responsive, button margin, font style and some UI optimization </td>
-            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Break Generator</a></td>
-            <td>31/05/2023</td>
+            <td> working on working on image average color finder</td>
+            <td>today working on share tool button, share 10015 button, share , facebook, twitter, massage icon, add to
+              favs button function, register button, sign in button, report bug button, color content show function and
+              some UI optimization </td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">image finder</a></td>
+            <td>07/06/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>4</th>
             <td>Javascript</td>
@@ -1465,7 +1467,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">12 Hrs</th>
+            <th class="is-size-4">18 Hrs</th>
           </tr>
         </thead>
       </table>
