--- a/index.html
+++ b/index.html
@@ -1439,17 +1439,20 @@
             <td>07/06/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>4</th>
             <td>Javascript</td>
-            <td>working on Bionic Reader tool</td>
-            <td>today working on tabs mobile responsive and some UI optimization</td>
-            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">Break Generator</a></td>
-            <td>11/05/2023</td>
+            <td> working on working on image average color finder</td>
+            <td>today working on Square Root function issue, simple hex copy function, simple RGBA copy function, simple
+              HSLA copy function, Square Root hex copy function, Square Root RGBA copy function, Square Root HSLA copy
+              function, Dominant hex copy function, Dominant RGBA copy function, Dominant HSLA copy function, and some
+              UI optimization</td>
+            <td><a href="" target="_blank">Break Generator</a>image finder</td>
+            <td>8/06/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
