--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@
   </section>-->
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-29/05/2023 - 02/06/2023</h1>
+      <h1 class="title is-size-2">Time:-29/05/2023 - 07/06/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -1448,21 +1448,21 @@
               HSLA copy function, Square Root hex copy function, Square Root RGBA copy function, Square Root HSLA copy
               function, Dominant hex copy function, Dominant RGBA copy function, Dominant HSLA copy function, and some
               UI optimization</td>
-            <td><a href="" target="_blank">Break Generator</a>image finder</td>
+            <td><a href="https://surajbca.github.io/imageColorFinder/" target="_blank">Break Generator</a>image finder
+            </td>
             <td>8/06/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>5</th>
             <td>html, css, javascript</td>
             <td>working on image average color finder</td>
-            <td> today working on navbar, share button, add button, report bugs button, image upload button, show image
-              div, check button and some UI optimization </td>
-            <td><a href="" target="_blank">color finder</a></td>
+            <td> today working on copy function issue, image div margin padding and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/imageColorFinder/" target="_blank">color finder</a></td>
             <td>02/06/2023</td>
             <td>6 hr</td>
-          </tr>-->
+          </tr>
           <tr>
             <th></th>
             <th></th>
@@ -1470,7 +1470,7 @@
             <th></th>
             <th></th>
             <th>Total</th>
-            <th class="is-size-4">18 Hrs</th>
+            <th class="is-size-4">24 Hrs</th>
           </tr>
         </thead>
       </table>
