setup new project

--- a/index.html
+++ b/index.html
@@ -1476,6 +1476,91 @@
       </table>
     </div>
   </section>
+  <section class="section">
+    <div class="table-container">
+      <h1 class="title is-size-2">Time:-19/05/2023 - 20/05/2023</h1>
+      <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Language</th>
+            <th>Program Name</th>
+            <th>Program Defination</th>
+            <th>Program Link</th>
+            <th>Date</abbr></th>
+            <th>Spent Hours</th>
+          </tr>
+
+          <tr>
+            <th>1</th>
+            <td>Javascript</td>
+            <td>working on image average color finder</td>
+            <td>Today working on file read function, button margin padding background color, and some UI optimization
+            </td>
+            <td><a href="https://surajbca.github.io/imageColorFinder" target="_blank">color finder</a></td>
+            <td>19/06/2023</td>
+            <td>6 hr</td>
+          </tr>
+
+          <tr>
+            <th>2</th>
+            <td>Javascript</td>
+            <td>working on working on image average color finder</td>
+            <td>today working on background color function, set background color in color info, grb color canvert in hex
+              and some optimization</td>
+            <td><a href="" target="_blank">Break Generator</a></td>
+            <td>20/06/2023</td>
+            <td>6 hr</td>
+          </tr>
+          <!--
+          <tr>
+            <th>3</th>
+            <td>javascript </td>
+            <td> working on working on image average color finder</td>
+            <td>today working on share tool button, share 10015 button, share , facebook, twitter, massage icon, add to
+              favs button function, register button, sign in button, report bug button, color content show function and
+              some UI optimization </td>
+            <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">image finder</a></td>
+            <td>07/06/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>4</th>
+            <td>Javascript</td>
+            <td> working on working on image average color finder</td>
+            <td>today working on Square Root function issue, simple hex copy function, simple RGBA copy function, simple
+              HSLA copy function, Square Root hex copy function, Square Root RGBA copy function, Square Root HSLA copy
+              function, Dominant hex copy function, Dominant RGBA copy function, Dominant HSLA copy function, and some
+              UI optimization</td>
+            <td><a href="https://surajbca.github.io/imageColorFinder/" target="_blank">Break Generator</a>image finder
+            </td>
+            <td>8/06/2023</td>
+            <td>6 hr</td>
+          </tr>
+  
+          <tr>
+            <th>5</th>
+            <td>html, css, javascript</td>
+            <td>working on image average color finder</td>
+            <td> today working on copy function issue, image div margin padding and some UI optimization </td>
+            <td><a href="https://surajbca.github.io/imageColorFinder/" target="_blank">color finder</a></td>
+            <td>02/06/2023</td>
+            <td>6 hr</td>
+          </tr>-->
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Total</th>
+            <th class="is-size-4">12 Hrs</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </section>
 </body>
 
 </html>
