setup new project

--- a/index.html
+++ b/index.html
@@ -1478,7 +1478,7 @@
   </section>
   <section class="section">
     <div class="table-container">
-      <h1 class="title is-size-2">Time:-19/05/2023 - 20/05/2023</h1>
+      <h1 class="title is-size-2">Time:-19/05/2023 - 21/05/2023</h1>
       <table class="table  is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -1506,25 +1506,24 @@
             <th>2</th>
             <td>Javascript</td>
             <td>working on working on image average color finder</td>
-            <td>today working on background color function, set background color in color info, grb color canvert in hex
+            <td>today working on background color function, set background color in color info, RGB color convert in hex
               and some optimization</td>
-            <td><a href="" target="_blank">Break Generator</a></td>
+            <td><a href="https://surajbca.github.io/imageColorFinder" target="_blank">Break Generator</a></td>
             <td>20/06/2023</td>
             <td>6 hr</td>
           </tr>
-          <!--
+
           <tr>
             <th>3</th>
             <td>javascript </td>
             <td> working on working on image average color finder</td>
-            <td>today working on share tool button, share 10015 button, share , facebook, twitter, massage icon, add to
-              favs button function, register button, sign in button, report bug button, color content show function and
-              some UI optimization </td>
+            <td>today working on convert rgb value to hex , convert rbg value to hls value, background color type
+              function and some UI optimization </td>
             <td><a href="https://surajbca.github.io/bionicreader/" target="_blank">image finder</a></td>
-            <td>07/06/2023</td>
+            <td>21/06/2023</td>
             <td>6 hr</td>
           </tr>
-  
+          <!--
           <tr>
             <th>4</th>
             <td>Javascript</td>
